@@ -1,14 +1,15 @@
 Source: overlay-scrollbar
 Priority: optional
 Maintainer: Ubuntu Desktop Team <ubuntu-desktop@lists.ubuntu.com>
-Build-Depends: debhelper (>= 7.0.50~),
+Build-Depends: debhelper (>= 8),
                cdbs (>= 0.4.41),
                autotools-dev,
                libglib2.0-dev (>= 2.26.0),
                libgtk2.0-dev (>= 2.24.3-0ubuntu5),
                libgtk-3-dev (>= 3.3.6-0ubuntu1),
                libcairo2-dev (>= 1.10),
-Standards-Version: 3.9.2
+               dh-autoreconf
+Standards-Version: 3.9.3
 Section: libs
 Homepage: http://launchpad.net/ayatana-scrollbar
 Vcs-Bzr: https://code.launchpad.net/~ubuntu-desktop/ayatana-scrollbar/ubuntu
@@ -25,19 +26,6 @@ Description: Scrollbar overlayed widget - shared lib
  .
  This package contains shared libraries to be used by applications.
 
-Package: liboverlay-scrollbar-0.2-dev
-Section: libdevel
-Architecture: any
-Depends: liboverlay-scrollbar-0.2-0 (= ${binary:Version}),
-         libglib2.0-dev (>= 2.26.0),
-         libcairo2-dev (>= 1.10),
-         ${misc:Depends}
-Description: Scrollbar overlayed widget - dev files
- Overlay scrollbar is a library implementing a new GTK Widget enabling
- a dynamic overlay behavior.
- .
- This package contains files that are needed to build applications.
-
 Package: liboverlay-scrollbar3-0.2-0
 Section: libs
 Architecture: any
@@ -49,19 +37,6 @@ Description: Scrollbar overlayed widget - shared lib
  a dynamic overlay behavior.
  .
  This package contains shared libraries to be used by applications.
-
-Package: liboverlay-scrollbar3-0.2-dev
-Section: libdevel
-Architecture: any
-Depends: liboverlay-scrollbar3-0.2-0 (= ${binary:Version}),
-         libglib2.0-dev (>= 2.26.0),
-         libcairo2-dev (>= 1.10),
-         ${misc:Depends}
-Description: Scrollbar overlayed widget - dev files
- Overlay scrollbar is a library implementing a new GTK Widget enabling
- a dynamic overlay behavior.
- .
- This package contains files that are needed to build applications.
 
 Package: overlay-scrollbar
 Section: libs
