@@ -1,1 +1,1 @@
-debian/tmp/gtk2/usr/lib/liboverlay-scrollbar-0*.so.* /usr/lib/
+debian/tmp/gtk2/usr/lib/* /usr/lib/
