@@ -1,1 +1,1 @@
-debian/tmp/gtk3/usr/lib/liboverlay-scrollbar3-0*.so.* /usr/lib/
+debian/tmp/gtk3/usr/lib/*  /usr/lib/
