@@ -1,3 +1,0 @@
-debian/tmp/gtk3/usr/include/* /usr/include/
-debian/tmp/gtk3/usr/lib/pkgconfig /usr/lib/
-debian/tmp/gtk3/usr/lib/liboverlay-scrollbar3-0*.so /usr/lib/
