@@ -5,6 +5,7 @@ DEB_MAKE_FLAVORS = gtk2 gtk3
 
 include /usr/share/cdbs/1/rules/debhelper.mk
 include /usr/share/cdbs/1/class/gnome.mk
+include /usr/share/cdbs/1/rules/autoreconf.mk
 
 DEB_MAKE_DESTDIRSKEL = $(CURDIR)/debian/tmp/@FLAVOR@
 DEB_DESTDIR = $(CURDIR)/debian/tmp/$(cdbs_make_curflavor)/
@@ -12,11 +13,14 @@ DEB_DESTDIR = $(CURDIR)/debian/tmp/$(cdbs_make_curflavor)/
 DEB_CONFIGURE_FLAGS_gtk2 = --with-gtk=2
 DEB_CONFIGURE_FLAGS_gtk3 = --with-gtk=3
 DEB_CONFIGURE_EXTRA_FLAGS = --disable-static
+DEB_CONFIGURE_EXTRA_FLAGS += --libdir=\$${prefix}/lib/$(DEB_HOST_MULTIARCH) 
+DEB_DH_MAKESHLIBS_ARGS_ALL += --exclude=usr/lib/$(DEB_HOST_MULTIARCH)/gtk-2.0/modules
+DEB_DH_MAKESHLIBS_ARGS_ALL += --exclude=usr/lib/$(DEB_HOST_MULTIARCH)/gtk-3.0/modules
 
 debian/stamp-autotools/gtk2: cdbs_configure_flags += $(DEB_CONFIGURE_FLAGS_gtk2)
 debian/stamp-autotools/gtk3: cdbs_configure_flags += $(DEB_CONFIGURE_FLAGS_gtk3)
 
 common-install-arch::
 	find debian/tmp -name \*.la -delete
-	rm debian/tmp/*/etc/X11/Xsession.d/81overlay-scrollbar
+	rm -rf debian/tmp/gtk2/usr/share/glib-2.0/schemas
 	dh_install --fail-missing
